--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>台球杆专卖 -</title>
+  <title>台球杆专卖 </title>
   <style>
     body { margin: 0; background: #f7f7f7; font-family: "微软雅黑", Arial, sans-serif; }
     .container { max-width: 480px; margin: 0 auto; background: #fff; min-height: 100vh; }
