--- a/index.html
+++ b/index.html
@@ -122,9 +122,9 @@
         <input type="text" id="qtyInput" class="qty-input" value="1" readonly>
         <button class="qty-btn" id="qtyPlus">+</button>
       </div>
-      <div class="section-title">快手ID</div>
+      <div class="section-title">抖音ID</div>
       <div class="input-group">
-        <input type="text" id="ksid" placeholder="请输入您的快手ID" autocomplete="off">
+        <input type="text" id="ksid" placeholder="请输入您的抖音ID" autocomplete="off">
         <span id="ksid-feedback"></span>
         <span id="ksid-tip" class="ksid-tip"></span>
       </div>
@@ -205,7 +205,7 @@
       updateOrderInfo();
     }
 
-    // 快手ID输入与按钮联动
+    // 抖音ID输入与按钮联动
     const ksidInput = document.getElementById('ksid');
     const ksidFeedback = document.getElementById('ksid-feedback');
     const ksidTip = document.getElementById('ksid-tip');
